--- a/src/welcome.css
+++ b/src/welcome.css
@@ -26,24 +26,24 @@ html, body {
   z-index: 10;
 }
 
-/* Blue bar: ends in a diagonal from top-right to bottom-left */
+/* Blue bar: diagonal from top-left to middle */
 .blue-bar {
   position: absolute;
   left: 0;
   width: 720px;
   height: 100%;
   background: #1B577E;
-  clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, calc(100% - 15px) 100%, 0% 100%);
 }
 
-/* Orange bar: starts in a diagonal from top-left to bottom-right */
+/* Orange bar: diagonal from middle to top-right */
 .orange-bar {
   position: absolute;
   left: 720px;
   width: 720px;
   height: 100%;
   background: #EB5617;
-  clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(15px 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 
