--- a/src/gameend.css
+++ b/src/gameend.css
@@ -1,39 +1,44 @@
 /* Container */
-.end-game-container {
+.end-game-desktop {
   position: relative;
   width: 1440px;
   height: 1024px;
   background: #FFFFFF;
+  overflow: visible; /* Changed from hidden to prevent clipping */
+  font-family: 'Montserrat', sans-serif;
 }
 
-/* Header Section */
-.end-game-header {
+/* === Top Bar === */
+.end-game-group-20937 {
   position: absolute;
   width: 1440px;
   height: 31.44px;
-  left: 0px;
   top: 0px;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
+  left: 45px;
 }
 
-.end-game-header-left {
+/* Blue section with subtle diagonal right edge */
+.end-game-rectangle-746 {
   position: absolute;
   width: 720px;
   height: 31.44px;
   right: 720px;
   top: 0px;
   background: #1B577E;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
+  z-index: 1;
+  clip-path: polygon(0 0, 100% 0, 98% 100%, 0% 100%);
 }
 
-.end-game-header-right {
+/* Orange section with matching subtle diagonal left edge */
+.end-game-rectangle-745 {
   position: absolute;
   width: 744.67px;
   height: 31.44px;
   left: 695.33px;
   top: 0px;
   background: #EB5617;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
+  z-index: 2;
+  clip-path: polygon(2% 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 /* Logo and Watermark */
@@ -68,25 +73,20 @@
   box-shadow: 0px 0px 5.93385px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
   background: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Content Area */
 .end-game-content {
-  position: absolute;
-  width: 527px;
-  height: 121px;
-  left: 456.07px;
-  top: 391px;
   text-align: center;
+  width: 527px;
 }
 
 /* Title (Felicitaciones/Congratulations) */
 .end-game-title {
-  position: absolute;
-  width: 278px;
-  height: 41px;
-  left: calc(50% - 278px/2 - 3.93px);
-  top: 391px;
+  margin: 0 0 20px 0;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 600;
@@ -97,17 +97,13 @@
 
 /* Message Text */
 .end-game-text {
-  position: absolute;
-  width: 527px;
-  height: 40px;
-  left: calc(50% - 527px/2 - 0.43px);
-  top: 472px;
+  margin: 10px 0;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 40px;
-  text-align: justify;
+  text-align: center;
   color: #333333;
 }
 
@@ -119,20 +115,16 @@
   align-items: center;
   padding: 12px;
   gap: 8px;
-  position: absolute;
   width: 217.98px;
   height: 42px;
-  left: calc(50% - 217.98px/2 - 3.93px);
-  top: 706px;
   background: #1B5680;
   border-radius: 11.9606px;
   cursor: pointer;
+  margin-top: 30px; /* Positioned before the end of the box */
 }
 
 /* Button Text */
 .end-game-button-text {
-  width: 29px;
-  height: 18px;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
