--- a/src/DigitSymbolTest.css
+++ b/src/DigitSymbolTest.css
@@ -141,6 +141,8 @@
   align-items: center;
   justify-content: center;
   animation: fadeIn 0.5s ease-in-out;
+  width: 100%;
+  height: 100%;
 }
 
 .start-real-game-btn {
